--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
                     <img src="images/figma.png" alt="Figma Icon">
                     <span>Open assets in Figma</span>
                 </a>
+                <a href="https://drive.google.com/drive/folders/1yKjm6l1W11YA26Y_mF5O_ApZWC_sDwXf?usp=sharing" target="_blank" class="drive-button visible" id="figmaBtn">
+                    <img src="images/drive.png" alt="Figma Icon">
+                    <span>Open all assets in Google Drive</span>
+                </a>
             </div>
         </main>
     </div>
